Automate Java memory settings at runtime
entrypoint.sh sets:
-XX:-UseContainerSupport -XX:MinRAMPercentage=$JAVA_MIN_RAM_PCT -XX:MaxRAMPercentage=$JAVA_MAX_RAM_PCT

defaults to 33/3% Min, 80% Max